# CUDA-matMul

./: .gitignore  CMakeLists.txt  README.md
include/: matmul_cpu.h  matmul_gpu.h  utils.h
lib/: README.md
src/: main.cpp  matmul_gpu.cu
